--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -85,9 +85,6 @@ general {
     # Set this to true if you are the chosen one. For lovers of glitch art and just general mad people.
     B:matrixMode.enabled=false
 
-    # The amount of time it takes a Passive flower to decay and turn into a dead bush. Defaults to 72000, 60 minutes. Setting this to -1 disables the feature altogether.
-    I:passiveDecay.time=72000
-
     # Set this to true to set the power system's particles to be a lot more subtle. Good for low-end systems, if the particles are causing lag.
     B:powerSystem.subtle=false
 
@@ -161,10 +158,10 @@ shedding {
     I:Bat.rate=-1
 
     # Configuration of Shedding for Blaze
-    S:Blaze.item=minecraft:blaze_powder
+    S:Blaze.item=
     I:Blaze.lexiconDisplaySize=40
     I:Blaze.metadata=0
-    I:Blaze.rate=8000
+    I:Blaze.rate=-1
 
     # Configuration of Shedding for Botania.botania:doppleganger
     S:"Botania.botania:doppleganger.item"=
@@ -191,10 +188,10 @@ shedding {
     I:CaveSpider.rate=-1
 
     # Configuration of Shedding for Chicken
-    S:Chicken.item=minecraft:feather
-    I:Chicken.lexiconDisplaySize=20
+    S:Chicken.item=
+    I:Chicken.lexiconDisplaySize=40
     I:Chicken.metadata=0
-    I:Chicken.rate=26000
+    I:Chicken.rate=-1
 
     # Configuration of Shedding for Cow
     S:Cow.item=
@@ -233,10 +230,10 @@ shedding {
     I:EntityHorse.rate=-1
 
     # Configuration of Shedding for Ghast
-    S:Ghast.item=minecraft:ghast_tear
-    I:Ghast.lexiconDisplaySize=30
+    S:Ghast.item=
+    I:Ghast.lexiconDisplaySize=40
     I:Ghast.metadata=0
-    I:Ghast.rate=9001
+    I:Ghast.rate=-1
 
     # Configuration of Shedding for Giant
     S:Giant.item=
@@ -359,16 +356,16 @@ shedding {
     I:Silverfish.rate=-1
 
     # Configuration of Shedding for Skeleton
-    S:Skeleton.item=minecraft:bone
+    S:Skeleton.item=
     I:Skeleton.lexiconDisplaySize=40
     I:Skeleton.metadata=0
-    I:Skeleton.rate=36000
+    I:Skeleton.rate=-1
 
     # Configuration of Shedding for Slime
-    S:Slime.item=minecraft:slime_ball
+    S:Slime.item=
     I:Slime.lexiconDisplaySize=40
     I:Slime.metadata=0
-    I:Slime.rate=21000
+    I:Slime.rate=-1
 
     # Configuration of Shedding for SnowMan
     S:SnowMan.item=
@@ -377,22 +374,22 @@ shedding {
     I:SnowMan.rate=-1
 
     # Configuration of Shedding for Spider
-    S:Spider.item=minecraft:string
+    S:Spider.item=
     I:Spider.lexiconDisplaySize=40
     I:Spider.metadata=0
-    I:Spider.rate=12000
+    I:Spider.rate=-1
 
     # Configuration of Shedding for Squid
-    S:Squid.item=minecraft:dye
-    I:Squid.lexiconDisplaySize=20
+    S:Squid.item=
+    I:Squid.lexiconDisplaySize=40
     I:Squid.metadata=0
-    I:Squid.rate=18000
+    I:Squid.rate=-1
 
     # Configuration of Shedding for Villager
-    S:Villager.item=minecraft:emerald
+    S:Villager.item=
     I:Villager.lexiconDisplaySize=40
     I:Villager.metadata=0
-    I:Villager.rate=226000
+    I:Villager.rate=-1
 
     # Configuration of Shedding for VillagerGolem
     S:VillagerGolem.item=
