--- a/config/rftools/rftools.cfg
+++ b/config/rftools/rftools.cfg
@@ -1490,10 +1490,10 @@ spawner {
 
 storage {
     # If true we automatically set the focus on the search field when opening the GUI for the modular storage. Set to false if you don't want that
-    B:autofocusSearch=false
+    B:autofocusSearch=true
 
     # If true we clear the search field when opening the GUI for the modular storage. Set to false if you don't want that
-    B:clearSearchOnOpen=true
+    B:clearSearchOnOpen=false
 
     # Background color for group lines
     I:groupBackground=-1123021
