--- a/config/Mekanism.cfg
+++ b/config/Mekanism.cfg
@@ -12,7 +12,7 @@ general {
     B:BlacklistTeslaPower=false
     I:ClientUpdateDelay=10
     B:ControlCircuitOreDict=true
-    I:CopperPerChunk=16
+    I:CopperPerChunk=0
     B:DestroyDisabledBlocks=true
     I:DisassemblerEnergyUsage=10
     B:DynamicTankEasterEgg=false
@@ -20,7 +20,7 @@ general {
     B:EnableWorldRegeneration=false
     D:EnergyPerHeat=1000.0
     D:EnergyPerRedstone=10000.0
-    S:EnergyType=J
+    S:EnergyType=RF
     I:EthyleneBurnTime=40
     D:EvaporationHeatDissipation=0.02
     D:EvaporationMaxTemp=3000.0
@@ -47,6 +47,7 @@ general {
     I:ObsidianTNTDelay=100
     B:OpsBypassRestrictions=false
     I:OsmiumPerChunk=12
+    B:PrefilledFluidTanks=true
     B:PrefilledGasTanks=true
     B:PumpWaterSources=false
     D:RFToJoules=0.4
@@ -56,8 +57,8 @@ general {
     S:"Temperature Units"=K
     D:TeslaToJoules=0.4
     D:ThermalEvaporationSpeed=1.0
-    I:TinPerChunk=14
-    B:UpdateNotifications=true
+    I:TinPerChunk=0
+    B:UpdateNotifications=false
     I:UpgradeModifier=10
     I:VoicePort=36123
     B:VoiceServerEnabled=true
