--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -76,11 +76,192 @@ crafting {
 
 
 "enabled blocks" {
+    B:WayofTime.bloodmagic.block.BlockBloodRune=true
+    B:WayofTime.bloodmagic.block.BlockBloodStoneBrick=true
+    B:WayofTime.bloodmagic.block.BlockCrystal=true
+    B:WayofTime.bloodmagic.block.BlockPath=true
+    B:WayofTime.bloodmagic.block.BlockRitualStone=true
+    B:arc.bloodarsenal.block.BlockBloodInfusedGlowstone=true
+    B:arc.bloodarsenal.block.BlockBloodInfusedIron=true
+    B:arc.bloodarsenal.block.BlockBloodInfusedWoodenLog=true
+    B:arc.bloodarsenal.block.BlockBloodInfusedWoodenPlanks=true
+    B:"arc.bloodarsenal.block.BlockBloodInfusedWoodenSlab$BlockBloodInfusedWoodenDoubleSlab"=true
+    B:arc.bloodarsenal.block.BlockSlate=true
+    B:blusunrize.immersiveengineering.common.blocks.BlockIEBase=true
+    B:com.jaquadro.minecraft.storagedrawers.block.BlockTrim=true
+    B:com.knoxhack.nethermetals.blocks.ModBlockOre=true
+    B:com.knoxhack.nethermetals.blocks.ModBlockOre2=true
+    B:com.knoxhack.nethermetals.blocks.ModBlockOre3=true
+    B:com.rwtema.extrautils2.blocks.BlockAngelBlock=true
+    B:com.rwtema.extrautils2.blocks.BlockCompressed=true
+    B:com.rwtema.extrautils2.blocks.BlockDecorativeGlass=true
+    B:com.rwtema.extrautils2.blocks.BlockDecorativeSolid=true
+    B:com.rwtema.extrautils2.blocks.BlockDecorativeSolidWood=true
+    B:com.rwtema.extrautils2.blocks.BlockRedstoneClock=true
+    B:crazypants.enderio.block.BlockReinforcedObsidian=true
+    B:crazypants.enderio.material.BlockIngotStorage=true
+    B:cyano.basemetals.blocks.BlockMetalBlock=true
+    B:cyano.basemetals.blocks.BlockMetalOre=true
+    B:exter.fodc.block.BlockOreConversionTable=true
     B:"forestry.arboriculture.blocks.log.BlockArbLog$1"=true
     B:"forestry.arboriculture.blocks.log.BlockFireproofVanillaLog$1"=true
+    B:"forestry.arboriculture.blocks.planks.BlockArbPlanks$1"=true
+    B:"forestry.arboriculture.blocks.planks.BlockFireproofVanillaPlanks$1"=true
+    B:forestry.core.blocks.BlockResourceOre=true
+    B:forestry.core.blocks.BlockResourceStorage=true
+    B:ic2.core.block.BlockMultiID=true
+    B:jotato.quantumflux.blocks.BlockGraphiteOre=true
+    B:jotato.quantumflux.blocks.darkstone.BlockDarkstone=true
+    B:lumien.randomthings.block.BlockBiomeStone=true
+    B:lumien.randomthings.block.BlockContactLever=true
+    B:lumien.randomthings.block.BlockDyeingMachine=true
+    B:lumien.randomthings.block.BlockLapisLamp=true
+    B:lumien.randomthings.block.BlockPod=true
+    B:lumien.randomthings.block.BlockQuartzLamp=true
+    B:lumien.randomthings.block.BlockRainbowLamp=true
+    B:lumien.randomthings.block.BlockStainedBrick=true
+    B:mcjty.rftools.blocks.MachineBase=true
+    B:mcjty.rftools.blocks.MachineFrame=true
+    B:mcjty.rftools.blocks.ores.DimensionalShardBlock=true
+    B:mcjty.rftools.blocks.teleporter.DestinationAnalyzerBlock=true
+    B:mcjty.rftools.blocks.teleporter.MatterBoosterBlock=true
+    B:mcjty.rftoolsdim.blocks.probe.ActivityProbeBlock=true
+    B:mcjty.rftoolsdim.blocks.shards.DimensionalBlankBlock=true
+    B:mcjty.rftoolsdim.blocks.shards.DimensionalBlock=true
+    B:mcjty.rftoolsdim.blocks.shards.DimensionalCross2Block=true
+    B:mcjty.rftoolsdim.blocks.shards.DimensionalCrossBlock=true
+    B:mcjty.rftoolsdim.blocks.shards.DimensionalPattern1Block=true
+    B:mcjty.rftoolsdim.blocks.shards.DimensionalPattern2Block=true
+    B:mcjty.rftoolsdim.blocks.shards.DimensionalSmallBlocks=true
+    B:mod.flatcoloredblocks.block.BlockFlatColored=true
+    B:mod.flatcoloredblocks.block.BlockFlatColoredTranslucent=true
+    B:moze_intel.projecte.gameObjs.blocks.FuelBlock=true
+    B:moze_intel.projecte.gameObjs.blocks.MatterBlock=true
+    B:net.malisis.doors.block.RustyLadder=true
+    B:net.minecraft.block.Block=true
+    B:net.minecraft.block.BlockBone=true
+    B:net.minecraft.block.BlockBookshelf=true
+    B:net.minecraft.block.BlockClay=true
+    B:net.minecraft.block.BlockColored=true
+    B:net.minecraft.block.BlockCompressedPowered=true
+    B:net.minecraft.block.BlockDirt=true
+    B:net.minecraft.block.BlockGlass=true
+    B:net.minecraft.block.BlockGlowstone=true
+    B:net.minecraft.block.BlockGrass=true
+    B:net.minecraft.block.BlockGravel=true
+    B:net.minecraft.block.BlockHardenedClay=true
+    B:net.minecraft.block.BlockHay=true
+    B:net.minecraft.block.BlockHugeMushroom=true
+    B:net.minecraft.block.BlockIce=true
+    B:net.minecraft.block.BlockMelon=true
+    B:net.minecraft.block.BlockNetherBrick=true
+    B:net.minecraft.block.BlockNetherrack=true
+    B:net.minecraft.block.BlockNewLeaf=true
     B:net.minecraft.block.BlockNewLog=true
+    B:net.minecraft.block.BlockObsidian=true
+    B:net.minecraft.block.BlockOldLeaf=true
     B:net.minecraft.block.BlockOldLog=true
+    B:net.minecraft.block.BlockOre=true
+    B:net.minecraft.block.BlockPackedIce=true
+    B:net.minecraft.block.BlockPlanks=true
+    B:net.minecraft.block.BlockPrismarine=true
+    B:net.minecraft.block.BlockQuartz=true
+    B:net.minecraft.block.BlockRedSandstone=true
+    B:net.minecraft.block.BlockRedstoneLight=true
+    B:net.minecraft.block.BlockRedstoneOre=true
+    B:net.minecraft.block.BlockRotatedPillar=true
+    B:net.minecraft.block.BlockSand=true
+    B:net.minecraft.block.BlockSandStone=true
+    B:net.minecraft.block.BlockSeaLantern=true
+    B:net.minecraft.block.BlockSilverfish=true
+    B:net.minecraft.block.BlockSlime=true
+    B:net.minecraft.block.BlockSnowBlock=true
+    B:net.minecraft.block.BlockSponge=true
+    B:net.minecraft.block.BlockStainedGlass=true
+    B:net.minecraft.block.BlockStone=true
+    B:net.minecraft.block.BlockStoneBrick=true
+    B:net.minecraft.block.BlockWorkbench=true
+    B:net.silentchaos512.gems.block.BlockEssenceOre=true
+    B:net.silentchaos512.gems.block.BlockFluffyBlock=true
+    B:net.silentchaos512.gems.block.BlockGem=true
+    B:net.silentchaos512.gems.block.BlockGemBrick=true
+    B:net.silentchaos512.gems.block.BlockGemLamp=true
+    B:net.silentchaos512.gems.block.BlockGemOre=true
+    B:net.silentchaos512.gems.block.BlockMisc=true
+    B:net.thedragonteam.armorplus.blocks.BlockLavaCrystal=true
+    B:net.thedragonteam.armorplus.blocks.CompressedObsidian=true
+    B:net.thedragonteam.armorplus.blocks.ElectricalBlock=true
+    B:net.thedragonteam.armorplus.blocks.SteelBlock=true
     B:org.jurassicraft.server.block.tree.AncientLogBlock=true
+    B:refinedstorage.block.BlockMachineCasing=true
+    B:slimeknights.tconstruct.gadgets.block.BlockBrownstone=true
+    B:slimeknights.tconstruct.gadgets.block.BlockDriedClay=true
+    B:slimeknights.tconstruct.shared.block.BlockClearGlass=true
+    B:slimeknights.tconstruct.shared.block.BlockClearStainedGlass=true
+    B:slimeknights.tconstruct.shared.block.BlockDecoGround=true
+    B:slimeknights.tconstruct.shared.block.BlockFirewood=true
+    B:slimeknights.tconstruct.shared.block.BlockMetal=true
+    B:slimeknights.tconstruct.shared.block.BlockOre=true
+    B:slimeknights.tconstruct.shared.block.BlockSoil=true
+    B:slimeknights.tconstruct.smeltery.block.BlockSeared=true
+    B:slimeknights.tconstruct.world.block.BlockSlime=true
+    B:slimeknights.tconstruct.world.block.BlockSlimeCongealed=true
+    B:slimeknights.tconstruct.world.block.BlockSlimeDirt=true
+    B:slimeknights.tconstruct.world.block.BlockSlimeLeaves=true
+    B:sokratis12GR.ArmorPlus.blocks.BlockLavaCrystal=true
+    B:sokratis12GR.ArmorPlus.blocks.CompressedObsidian=true
+    B:sokratis12GR.ArmorPlus.blocks.MetalOre=true
+    B:sokratis12gr.armorplus.blocks.BlockLavaCrystal=true
+    B:sokratis12gr.armorplus.blocks.CompressedObsidian=true
+    B:sokratis12gr.armorplus.blocks.ElectricalBlock=true
+    B:sokratis12gr.armorplus.blocks.SteelBlock=true
+    B:sokratis12gr.armorplus.blocks.SteelOre=true
+    B:vazkii.botania.common.block.BlockDreamwood=true
+    B:vazkii.botania.common.block.BlockEnchantedSoil=true
+    B:vazkii.botania.common.block.BlockFelPumpkin=true
+    B:vazkii.botania.common.block.BlockLivingrock=true
+    B:vazkii.botania.common.block.BlockLivingwood=true
+    B:vazkii.botania.common.block.BlockManaBomb=true
+    B:vazkii.botania.common.block.BlockRoot=true
+    B:vazkii.botania.common.block.BlockStorage=true
+    B:vazkii.botania.common.block.decor.Block18Stone=true
+    B:vazkii.botania.common.block.decor.BlockBlaze=true
+    B:vazkii.botania.common.block.decor.BlockCustomBrick=true
+    B:vazkii.botania.common.block.decor.BlockEndStoneBrick=true
+    B:vazkii.botania.common.block.decor.BlockPavement=true
+    B:vazkii.botania.common.block.decor.BlockPetalBlock=true
+    B:vazkii.botania.common.block.decor.BlockPrismarine=true
+    B:vazkii.botania.common.block.decor.BlockReeds=true
+    B:vazkii.botania.common.block.decor.BlockSeaLamp=true
+    B:vazkii.botania.common.block.decor.BlockShimmerrock=true
+    B:vazkii.botania.common.block.decor.BlockShimmerwoodPlanks=true
+    B:vazkii.botania.common.block.decor.BlockThatch=true
+    B:vazkii.botania.common.block.decor.biomestone.BlockBiomeStoneA=true
+    B:vazkii.botania.common.block.decor.biomestone.BlockBiomeStoneB=true
+    B:vazkii.botania.common.block.decor.quartz.BlockSpecialQuartz=true
+    B:vazkii.botania.common.block.mana.BlockAlchemyCatalyst=true
+    B:vazkii.botania.common.block.mana.BlockConjurationCatalyst=true
+    B:vazkii.quark.building.block.BlockBark=true
+    B:vazkii.quark.building.block.BlockCarvedWood=true
+    B:vazkii.quark.building.block.BlockCharredNetherBricks=true
+    B:vazkii.quark.building.block.BlockHardenedClayTiles=true
+    B:vazkii.quark.building.block.BlockIronPlate=true
+    B:vazkii.quark.building.block.BlockMidori=true
+    B:vazkii.quark.building.block.BlockMidoriPillar=true
+    B:vazkii.quark.building.block.BlockNewSandstone=true
+    B:vazkii.quark.building.block.BlockPolishedStone=true
+    B:vazkii.quark.building.block.BlockReed=true
+    B:vazkii.quark.building.block.BlockSandyBricks=true
+    B:vazkii.quark.building.block.BlockSnowBricks=true
+    B:vazkii.quark.building.block.BlockStainedClayTiles=true
+    B:vazkii.quark.building.block.BlockThatch=true
+    B:vazkii.quark.building.block.BlockWorldStoneBricks=true
+    B:vazkii.quark.decoration.block.BlockBlazeLantern=true
+    B:vazkii.quark.decoration.block.BlockCharcoal=true
+    B:vazkii.quark.decoration.block.BlockLitLamp=true
+    B:vazkii.quark.world.block.BlockBasalt=true
+    B:vazkii.quark.world.block.BlockBiotite=true
+    B:vazkii.quark.world.block.BlockBiotiteOre=true
 }
 
 
