--- a/config/forge.cfg
+++ b/config/forge.cfg
@@ -14,7 +14,7 @@ client {
 
 general {
     # Set to true to disable Forge's version check mechanics. Forge queries a small json file on our server for version information. For more details see the ForgeVersion class in our github.
-    B:disableVersionCheck=false
+    B:disableVersionCheck=true
 
     # Controls the number threshold at which Packet51 is preferred over Packet52, default and minimum 64, maximum 1024
     I:clumpingThreshold=64
@@ -65,8 +65,14 @@ general {
 
 
 version_checking {
-    B:Global=true
+    # Enable the entire mod update check system. This only applies to mods using the Forge system.
+    B:Global=false
+    B:Botania=true
+    B:Forge=true
+    B:armorplus=true
     B:fastleafdecay=true
+    B:nethermetals=true
+    B:netherportalfix=true
 }
 
 
