--- a/config/forgeChunkLoading.cfg
+++ b/config/forgeChunkLoading.cfg
@@ -45,6 +45,12 @@ defaults {
 }
 
 
+forge {
+    I:maximumChunksPerTicket=25
+    I:maximumTicketCount=200
+}
+
+
 ftbu {
     I:maximumChunksPerTicket=1000000
     I:maximumTicketCount=100
