--- a/config/gravestone.cfg
+++ b/config/gravestone.cfg
@@ -1,9 +1,44 @@
 # Configuration file
 
 gravestone {
-    B:check_updates=true
+    S:"Replaceable blocks" <
+        minecraft:tallgrass
+        minecraft:water
+        minecraft:lava
+        minecraft:yellow_flower
+        minecraft:red_flower
+        minecraft:double_plant
+        minecraft:sapling
+        minecraft:brown_mushroom
+        minecraft:red_mushroom
+        minecraft:torch
+        minecraft:snow_layer
+        minecraft:vine
+        minecraft:deadbush
+        minecraft:reeds
+     >
+    B:check_updates=false
+    B:enable_death_location_finder_reciepe=false
     B:enable_death_note=true
     B:enable_living_entity_graves=false
+    B:render_skull=true
+    S:replaceable_blocks <
+        minecraft:tallgrass
+        minecraft:water
+        minecraft:lava
+        minecraft:yellow_flower
+        minecraft:red_flower
+        minecraft:double_plant
+        minecraft:sapling
+        minecraft:brown_mushroom
+        minecraft:red_mushroom
+        minecraft:torch
+        minecraft:snow_layer
+        minecraft:vine
+        minecraft:deadbush
+        minecraft:reeds
+        minecraft:fire
+     >
 }
 
 
