--- a/config/immersiveengineering.cfg
+++ b/config/immersiveengineering.cfg
@@ -72,11 +72,11 @@ general {
 
     # A list of preferred Mod IDs that results of IE processes should stem from, aka which mod you want the copper to come from. This affects the ores dug by the excavator, as well as those crushing recipes that don't have associated IE items. This list is in oreder of priority.
     S:"Preferred Ores" <
-        immersiveengineering
+        basemetals
      >
 
     # Set this to false to hide the update news in the manual
-    B:"Show Update News"=true
+    B:"Show Update News"=false
 
     # The ID of the texture sheet used for revolvers. This should probably never conflict since not many mods do custom sheets.
     I:"TextureSheet: Revolvers"=94
@@ -315,7 +315,7 @@ oregen {
 
     # Generation config for Copper Ore. Parameters: Vein size, lowest possible Y, highest possible Y, veins per chunk, chance for vein to spawn (out of 100). Set vein size to 0 to disable the generation
     I:Copper <
-        8
+        0
         40
         72
         8
@@ -330,7 +330,7 @@ oregen {
 
     # Generation config for Lead Ore. Parameters: Vein size, lowest possible Y, highest possible Y, veins per chunk, chance for vein to spawn (out of 100). Set vein size to 0 to disable the generation
     I:Lead <
-        6
+        0
         8
         36
         4
@@ -339,7 +339,7 @@ oregen {
 
     # Generation config for Nickel Ore. Parameters: Vein size, lowest possible Y, highest possible Y, veins per chunk, chance for vein to spawn (out of 100). Set vein size to 0 to disable the generation
     I:Nickel <
-        6
+        0
         8
         24
         2
@@ -348,7 +348,7 @@ oregen {
 
     # Generation config for Silver Ore. Parameters: Vein size, lowest possible Y, highest possible Y, veins per chunk, chance for vein to spawn (out of 100). Set vein size to 0 to disable the generation
     I:Silver <
-        8
+        0
         8
         40
         4
