Updates, additions, and removals.
Remove IndustrialCraft2 (and Industrial Wires): We have Mekanism for most of those machines.
Add JEI Bees and More Bees.
Add Natura.
Add missing configs for Stellar API and Stellar Sky.

Update Botania, SiltensGems, thedragoncore, Waila Harvestability, rftoolsdim, Reliquary, mcjtylib, Enchiridion, and ArmorPlus.

--- a/config/armorplus.cfg
+++ b/config/armorplus.cfg
@@ -376,14 +376,14 @@ blacklist {
 debug {
     # Enable/Disable Debug Mode
     B:debugMode=false
+
+    # Enable/Disable Debug Mode for the Gift Of The Gods
+    B:debugModeGOTG=false
 }
 
 
 dimensions {
-    # Enable/Disable the ARP Dimension
     B:arpDimensionEnabled=false
-
-    # Set the ArmorPlus dimension ID
     I:arpDimensionId=234
 }
 
@@ -478,6 +478,93 @@ mobdrops {
 }
 
 
+teslaitems {
+    # Set the amount of Tesla that will be consumed when the item is used
+    I:costAxe=10
+
+    # Set the amount of Tesla that will be consumed when the item is used
+    I:costHoe=10
+
+    # Set the amount of Tesla that will be consumed when the item is used
+    I:costPickaxe=10
+
+    # Set the amount of Tesla that will be consumed when the item is used
+    I:costShovel=10
+
+    # Set the amount of Tesla that will be consumed when the item is used
+    I:costSteelArmor=1
+
+    # Set the amount of Tesla that will be consumed when the item is used
+    I:costSword=10
+
+    # Set the amount of Tesla that the item can input
+    I:inputAxe=10
+
+    # Set the amount of Tesla that the item can input
+    I:inputHoe=10
+
+    # Set the amount of Tesla that the item can input
+    I:inputPickaxe=10
+
+    # Set the amount of Tesla that the item can input
+    I:inputShovel=10
+
+    # Set the amount of Tesla that the item can input
+    I:inputSteelArmor=10
+
+    # Set the amount of Tesla that the item can input
+    I:inputSword=10
+
+    # Set the max capacity that the item can hold
+    I:maxCapacityAxe=3000
+
+    # Set the max capacity that the item can hold
+    I:maxCapacityHoe=3000
+
+    # Set the max capacity that the item can hold
+    I:maxCapacityPickaxe=3000
+
+    # Set the max capacity that the item can hold
+    I:maxCapacityShovel=3000
+
+    # Set the max capacity that the item can hold
+    I:maxCapacitySteelArmor=3000
+
+    # Set the max capacity that the item can hold
+    I:maxCapacitySword=3000
+
+    # Set the amount of Tesla that the item can output
+    I:outputAxe=10
+
+    # Set the amount of Tesla that the item can output
+    I:outputHoe=10
+
+    # Set the amount of Tesla that the item can output
+    I:outputPickaxe=10
+
+    # Set the amount of Tesla that the item can output
+    I:outputShovel=10
+
+    # Set the amount of Tesla that the item can output
+    I:outputSteelArmor=10
+
+    # Set the amount of Tesla that the item can output
+    I:outputSword=10
+}
+
+
+thegiftofthegods {
+    # Set the cooldown ticks until you can use The Gift Of The Gods (1 second = 20 ticks)
+    I:cooldownTicks=600
+
+    # Enable/Disable The Gift Of The Gods
+    B:enableTheGiftOfTheGods=true
+
+    # Set the max amount of uses for the item (0 = 1 use, 1 = 2 uses etc.)
+    I:maxUses=1
+}
+
+
 weapons {
     # Enable/Disable The ArmorPlus Battle Axes's Recipes
     B:enableBattleAxesRecipes=true
@@ -567,6 +654,9 @@ worldgeneration {
     castlegeneration {
         # Set the spawn chance of the Castle Generation in the Overworld
         I:castleGenSpawnChance=0
+
+        # Enable/Disable the Castle Generation
+        B:enableCastleGenSpawnChance=false
     }
 
 }
