--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -475,6 +475,30 @@ shedding {
     I:jurassicraft.velociraptor.metadata=0
     I:jurassicraft.velociraptor.rate=-1
 
+    # Configuration of Shedding for natura.babyheatscarspider
+    S:natura.babyheatscarspider.item=
+    I:natura.babyheatscarspider.lexiconDisplaySize=40
+    I:natura.babyheatscarspider.metadata=0
+    I:natura.babyheatscarspider.rate=-1
+
+    # Configuration of Shedding for natura.heatscarspider
+    S:natura.heatscarspider.item=
+    I:natura.heatscarspider.lexiconDisplaySize=40
+    I:natura.heatscarspider.metadata=0
+    I:natura.heatscarspider.rate=-1
+
+    # Configuration of Shedding for natura.imp
+    S:natura.imp.item=
+    I:natura.imp.lexiconDisplaySize=40
+    I:natura.imp.metadata=0
+    I:natura.imp.rate=-1
+
+    # Configuration of Shedding for natura.nitrocreeper
+    S:natura.nitrocreeper.item=
+    I:natura.nitrocreeper.lexiconDisplaySize=40
+    I:natura.nitrocreeper.metadata=0
+    I:natura.nitrocreeper.rate=-1
+
     # Configuration of Shedding for randomthings.spirit
     S:randomthings.spirit.item=
     I:randomthings.spirit.lexiconDisplaySize=40
