--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -92,6 +92,10 @@ crafting {
     B:com.knoxhack.nethermetals.blocks.ModBlockOre=true
     B:com.knoxhack.nethermetals.blocks.ModBlockOre2=true
     B:com.knoxhack.nethermetals.blocks.ModBlockOre3=true
+    B:com.progwml6.natura.nether.block.logs.BlockNetherLog=true
+    B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog=true
+    B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog2=true
+    B:com.progwml6.natura.overworld.block.logs.BlockRedwoodLog=true
     B:com.rwtema.extrautils2.blocks.BlockAngelBlock=true
     B:com.rwtema.extrautils2.blocks.BlockCompressed=true
     B:com.rwtema.extrautils2.blocks.BlockDecorativeGlass=true
