Disable oregen for ModSquad, using OreSpawn

--- a/config/modsquad.cfg
+++ b/config/modsquad.cfg
@@ -2,13 +2,13 @@
 
 general {
     # Generates Copper Ore [default: true]
-    B:allowCopperGen=true
+    B:allowCopperGen=false
 
     # Generates Lead Ore [default: true]
-    B:allowLeadGen=true
+    B:allowLeadGen=false
 
     # Generates Tin Ore [default: true]
-    B:allowTinGen=true
+    B:allowTinGen=false
 
     # Allow's the electric potato to break [default: true]
     B:electricPotatoBreakChance=true
