Add Draconic Evolution and dependencies

--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -427,6 +427,12 @@ shedding {
     I:armorplus.ender_dragon_zombie.metadata=0
     I:armorplus.ender_dragon_zombie.rate=-1
 
+    # Configuration of Shedding for draconicevolution.ChaosGuardian
+    S:draconicevolution.ChaosGuardian.item=
+    I:draconicevolution.ChaosGuardian.lexiconDisplaySize=40
+    I:draconicevolution.ChaosGuardian.metadata=0
+    I:draconicevolution.ChaosGuardian.rate=-1
+
     # Configuration of Shedding for forestry.butterflyGE
     S:forestry.butterflyGE.item=
     I:forestry.butterflyGE.lexiconDisplaySize=40
