Update Mystical Agriculture

--- a/config/mysticalagriculture.cfg
+++ b/config/mysticalagriculture.cfg
@@ -25,6 +25,9 @@ gear {
     # Gear Module enabled? [default: true]
     B:"$gear_module_override"=true
 
+    # Makes the Essence Ingots require 4 essence each instead of 2. [default: false]
+    B:harder_ingots=false
+
     # The durability of the Core Remover. [range: 1 ~ 25000, default: 4]
     I:remover_durability=4
 
@@ -212,6 +215,9 @@ seeds {
 ##########################################################################################################
 
 settings {
+    # Should you be able to craft mob chunks? [default: true]
+    B:craftable_chunks=true
+
     # The durability of the basic Infusion Crystal. [range: 1 ~ 25000, default: 1000]
     I:crystal_durability=1000
 
