--- a/config/rftools/rftools.cfg
+++ b/config/rftools/rftools.cfg
@@ -1332,6 +1332,9 @@ powercell {
 
     # Base amount of RF/tick that can be extracted/inserted in this block
     I:rfPerTick=5000
+
+    # How much worse is the simple cell with RF and RF/t
+    I:simpleFactor=4
 }
 
 
