Adding Blood Magic back in

--- a/config/Guide-API/Guide-API.cfg
+++ b/config/Guide-API/Guide-API.cfg
@@ -19,6 +19,7 @@ books {
     ##########################################################################################################
 
     spawn {
+        B:"bloodmagic:BloodMagic"=false
         B:"silentgems:Silent's Gems Guide"=true
     }
 
