--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -28,6 +28,11 @@ general {
 ##########################################################################################################
 
 modules {
+    B:BloodMagic.array=true
+    B:BloodMagic.bloodAltar=true
+    B:BloodMagic.bypassSneak=false
+    B:BloodMagic.ritualController=true
+    B:BloodMagic.teleposer=true
     B:super_crafting_frame.shift_for_more_info=true
     B:tconstruct.casting=true
     B:tconstruct.progress=true
@@ -50,6 +55,11 @@ modules {
 ##########################################################################################################
 
 server_forcing {
+    B:BloodMagic.array=false
+    B:BloodMagic.bloodAltar=false
+    B:BloodMagic.bypassSneak=false
+    B:BloodMagic.ritualController=false
+    B:BloodMagic.teleposer=false
     B:super_crafting_frame.shift_for_more_info=false
     B:tconstruct.casting=false
     B:tconstruct.progress=false
