--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -163,6 +163,24 @@ shedding {
     I:Blaze.metadata=0
     I:Blaze.rate=-1
 
+    # Configuration of Shedding for BloodMagic.CorruptedZombie
+    S:BloodMagic.CorruptedZombie.item=
+    I:BloodMagic.CorruptedZombie.lexiconDisplaySize=40
+    I:BloodMagic.CorruptedZombie.metadata=0
+    I:BloodMagic.CorruptedZombie.rate=-1
+
+    # Configuration of Shedding for BloodMagic.Mimic
+    S:BloodMagic.Mimic.item=
+    I:BloodMagic.Mimic.lexiconDisplaySize=40
+    I:BloodMagic.Mimic.metadata=0
+    I:BloodMagic.Mimic.rate=-1
+
+    # Configuration of Shedding for BloodMagic.SentientSpecter
+    S:BloodMagic.SentientSpecter.item=
+    I:BloodMagic.SentientSpecter.lexiconDisplaySize=40
+    I:BloodMagic.SentientSpecter.metadata=0
+    I:BloodMagic.SentientSpecter.rate=-1
+
     # Configuration of Shedding for Botania.botania:doppleganger
     S:"Botania.botania:doppleganger.item"=
     I:"Botania.botania:doppleganger.lexiconDisplaySize"=40
