Updated Blood Magic and RFTools

--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -163,6 +163,24 @@ shedding {
     I:Blaze.metadata=0
     I:Blaze.rate=-1
 
+    # Configuration of Shedding for BloodMagic.CorruptedChicken
+    S:BloodMagic.CorruptedChicken.item=
+    I:BloodMagic.CorruptedChicken.lexiconDisplaySize=40
+    I:BloodMagic.CorruptedChicken.metadata=0
+    I:BloodMagic.CorruptedChicken.rate=-1
+
+    # Configuration of Shedding for BloodMagic.CorruptedSheep
+    S:BloodMagic.CorruptedSheep.item=
+    I:BloodMagic.CorruptedSheep.lexiconDisplaySize=40
+    I:BloodMagic.CorruptedSheep.metadata=0
+    I:BloodMagic.CorruptedSheep.rate=-1
+
+    # Configuration of Shedding for BloodMagic.CorruptedSpider
+    S:BloodMagic.CorruptedSpider.item=
+    I:BloodMagic.CorruptedSpider.lexiconDisplaySize=40
+    I:BloodMagic.CorruptedSpider.metadata=0
+    I:BloodMagic.CorruptedSpider.rate=-1
+
     # Configuration of Shedding for BloodMagic.CorruptedZombie
     S:BloodMagic.CorruptedZombie.item=
     I:BloodMagic.CorruptedZombie.lexiconDisplaySize=40
