--- a/config/rftools/rftools.cfg
+++ b/config/rftools/rftools.cfg
@@ -1697,8 +1697,14 @@ storageconfig {
 ##########################################################################################################
 
 storagemonitor {
+    # If this is true then opening the storage scanner GUI will automatically select the starred inventory view
+    B:hilightStarredOnGuiOpen=true
+
     # Time (in seconds) to hilight a block in the world
     I:hilightTime=5
+
+    # If this is true then requesting items from the storage scanner will go straight into the player inventory and not the output slot
+    B:requestStraightToInventory=true
 
     # Amount of RF used to insert an item
     I:rfPerInsert=20
