Update Draconic Evolution and Tinker's Construct

--- a/config/brandon3055/DraconicEvolution.cfg
+++ b/config/brandon3055/DraconicEvolution.cfg
@@ -13,7 +13,9 @@ blocks {
     B:chaos_shard_atmos=true
     B:crafting_pedestal=true
     B:creative_rf_source=true
+    B:dislocator_pedestal=true
     B:dislocator_receptacle=true
+    B:diss_enchanter=true
     B:draconic_block=true
     B:draconium_block=true
     B:draconium_ore=true
@@ -28,6 +30,7 @@ blocks {
     B:particle_generator=true
     B:placed_item=true
     B:portal=true
+    B:rain_sensor=true
 }
 
 
