Mystical Agriculture updated

--- a/config/mysticalagriculture.cfg
+++ b/config/mysticalagriculture.cfg
@@ -65,9 +65,12 @@ gear {
     I:manyullyn_tier=5
     I:mystical_flower_tier=2
     I:osmium_tier=4
+    I:peridot_tier=4
     I:pulsating_iron_tier=4
     I:redstone_alloy_tier=3
     I:refined_obsidian_tier=5
+    I:ruby_tier=4
+    I:sapphire=4
     I:silver_tier=3
     I:soularium_tier=4
     I:steels_tier=4
@@ -102,9 +105,12 @@ gear {
     B:manyullyn_seeds=true
     B:mystical_flower_seeds=true
     B:osmium_seeds=true
+    B:peridot_seeds=true
     B:pulsating_iron_seeds=true
     B:redstone_alloy_seeds=true
     B:refined_obsidian_seeds=true
+    B:ruby_seeds=true
+    B:sapphire_seeds=true
     B:silver_seeds=true
     B:soularium_seeds=true
     B:steel_seeds=true
@@ -221,6 +227,9 @@ settings {
     # The durability of the basic Infusion Crystal. [range: 1 ~ 25000, default: 1000]
     I:crystal_durability=1000
 
+    # Amount of Supremium Essence the Ender Dragon should drop when killed. [range: 0 ~ 64, default: 4]
+    I:dragon_supremium=4
+
     # Percentage chance of a second essence dropping. [range: 0 ~ 100, default: 5]
     I:essence_chance=5
 
@@ -238,6 +247,12 @@ settings {
 
     # Percentage chance of a second seed dropping. [range: 0 ~ 100, default: 10]
     I:seed_chance=10
+
+    # Amount of Supremium Essence the Wither should drop when killed. [range: 0 ~ 64, default: 2]
+    I:wither_supremium=2
+
+    # Enable the Witherproof Block and Glass? [default: true]
+    B:witherproof_blocks=true
 }
 
 
