--- a/config/mysticalagriculture_recipes.cfg
+++ b/config/mysticalagriculture_recipes.cfg
@@ -28,6 +28,7 @@ botania {
     I:podzol=8
     I:pumpkin=16
     I:sand=16
+    I:sapling=4
     I:soul_sand=20
     I:stone=32
     I:sugarcane=16
@@ -56,6 +57,13 @@ botania {
 
 "extreme reactors" {
     I:yellorium=4
+}
+
+
+gems {
+    I:peridot=6
+    I:ruby=6
+    I:sapphire=6
 }
 
 
