--- a/config/Psi.cfg
+++ b/config/Psi.cfg
@@ -26,7 +26,7 @@ general {
     B:"Use Vanilla Particle Limiter"=true
 
     # Set this to false to disable checking and alerting when new Botania versions come out. (keywords for noobs: update notification message)
-    B:"Version Checking"=true
+    B:"Version Checking"=false
 }
 
 
