--- a/config/armorplus.cfg
+++ b/config/armorplus.cfg
@@ -423,6 +423,72 @@ enderdragonzombie {
 }
 
 
+energyitems {
+    # Set the amount of Energy that the item can input
+    I:inputAxe=10
+
+    # Set the amount of Energy that the item can input
+    I:inputElectricalArmor=10
+
+    # Set the amount of Energy that the item can input
+    I:inputHoe=10
+
+    # Set the amount of Energy that the item can input
+    I:inputPickaxe=10
+
+    # Set the amount of Energy that the item can input
+    I:inputShovel=10
+
+    # Set the amount of Energy that the item can input
+    I:inputSteelArmor=10
+
+    # Set the amount of Energy that the item can input
+    I:inputSword=10
+
+    # Set the max capacity that the item can hold
+    I:maxCapacityAxe=3000
+
+    # Set the max capacity that the item can hold
+    I:maxCapacityElectricalArmor=8000
+
+    # Set the max capacity that the item can hold
+    I:maxCapacityHoe=3000
+
+    # Set the max capacity that the item can hold
+    I:maxCapacityPickaxe=3000
+
+    # Set the max capacity that the item can hold
+    I:maxCapacityShovel=3000
+
+    # Set the max capacity that the item can hold
+    I:maxCapacitySteelArmor=3000
+
+    # Set the max capacity that the item can hold
+    I:maxCapacitySword=3000
+
+    # Set the amount of Energy that the item can output
+    I:outputAxe=10
+
+    # Set the amount of Energy that the item can output
+    I:outputElectricalArmor=1
+
+    # Set the amount of Energy that the item can output
+    I:outputHoe=10
+
+    # Set the amount of Energy that the item can output
+    I:outputPickaxe=10
+
+    # Set the amount of Energy that the item can output
+    I:outputShovel=10
+
+    # Set the amount of Energy that the item can output
+    I:outputSteelArmor=1
+
+    # Set the amount of Energy that the item can output
+    I:outputSword=10
+}
+
+
 flightability {
     # Enable/Disable The Armors Flight
     B:enableFlightAbility=true
@@ -473,76 +539,29 @@ mobdrops {
 
 
 teslaitems {
-    # Set the amount of Tesla that will be consumed when the item is used
     I:costAxe=10
-
-    # Set the amount of Tesla that will be consumed when the item is used
     I:costHoe=10
-
-    # Set the amount of Tesla that will be consumed when the item is used
     I:costPickaxe=10
-
-    # Set the amount of Tesla that will be consumed when the item is used
     I:costShovel=10
-
-    # Set the amount of Tesla that will be consumed when the item is used
     I:costSteelArmor=1
-
-    # Set the amount of Tesla that will be consumed when the item is used
     I:costSword=10
-
-    # Set the amount of Tesla that the item can input
     I:inputAxe=10
-
-    # Set the amount of Tesla that the item can input
     I:inputHoe=10
-
-    # Set the amount of Tesla that the item can input
     I:inputPickaxe=10
-
-    # Set the amount of Tesla that the item can input
     I:inputShovel=10
-
-    # Set the amount of Tesla that the item can input
     I:inputSteelArmor=10
-
-    # Set the amount of Tesla that the item can input
     I:inputSword=10
-
-    # Set the max capacity that the item can hold
     I:maxCapacityAxe=3000
-
-    # Set the max capacity that the item can hold
     I:maxCapacityHoe=3000
-
-    # Set the max capacity that the item can hold
     I:maxCapacityPickaxe=3000
-
-    # Set the max capacity that the item can hold
     I:maxCapacityShovel=3000
-
-    # Set the max capacity that the item can hold
     I:maxCapacitySteelArmor=3000
-
-    # Set the max capacity that the item can hold
     I:maxCapacitySword=3000
-
-    # Set the amount of Tesla that the item can output
     I:outputAxe=10
-
-    # Set the amount of Tesla that the item can output
     I:outputHoe=10
-
-    # Set the amount of Tesla that the item can output
     I:outputPickaxe=10
-
-    # Set the amount of Tesla that the item can output
     I:outputShovel=10
-
-    # Set the amount of Tesla that the item can output
     I:outputSteelArmor=10
-
-    # Set the amount of Tesla that the item can output
     I:outputSword=10
 }
 
