--- a/config/brandon3055/DraconicEvolution.cfg
+++ b/config/brandon3055/DraconicEvolution.cfg
@@ -9,6 +9,7 @@
 ##########################################################################################################
 
 blocks {
+    B:celestial_manipulator=true
     B:chaos_crystal=true
     B:chaos_shard_atmos=true
     B:crafting_pedestal=true
@@ -22,6 +23,7 @@ blocks {
     B:energy_infuser=true
     B:energy_pylon=true
     B:energy_storage_core=true
+    B:entity_detector=true
     B:fusion_crafting_core=true
     B:generator=true
     B:grinder=true
@@ -30,6 +32,7 @@ blocks {
     B:particle_generator=true
     B:placed_item=true
     B:portal=true
+    B:potentiometer=true
     B:rain_sensor=true
 }
 
