--- a/config/gravestone.cfg
+++ b/config/gravestone.cfg
@@ -21,6 +21,7 @@ gravestone {
     B:enable_death_location_finder_reciepe=false
     B:enable_death_note=true
     B:enable_living_entity_graves=false
+    B:only_owners_can_break=false
     B:remove_death_note=false
     B:render_skull=true
     S:replaceable_blocks <
