--- a/config/mysticalagriculture.cfg
+++ b/config/mysticalagriculture.cfg
@@ -12,6 +12,12 @@
 
     # Essence Apples enabled? [default: true]
     B:essence_apples=true
+
+    # Essence Furnaces enabled? [default: true]
+    B:essence_furnaces=true
+
+    # Ultimate Furnace enabled? Requires Essence Furnaces be enabled. [default: true]
+    B:ultimate_furnace=true
 }
 
 
@@ -30,6 +36,9 @@ gear {
 
     # The durability of the Core Remover. [range: 1 ~ 25000, default: 4]
     I:remover_durability=4
+
+    # Should Prudentium+ armor give set bonuses? This does not affect the Supremium Flight option. [default: true]
+    B:set_bonuses=true
 
     # Wearing a full set of Supremium Armor gives flight. [default: true]
     B:supremium_flight=true
@@ -236,8 +245,8 @@ settings {
     # Enable Growth Accelerators? [default: true]
     B:growth_accelerator=true
 
-    # Amount of seconds between each growth tick attempt. [range: 1 ~ 3600, default: 10]
-    I:growth_accelerator_speed=10
+    # Amount of seconds between each growth tick attempt. [range: 1 ~ 3600, default: 15]
+    I:growth_accelerator_speed=15
 
     # Percentage chance for a hostile mob when killed to drop an Inferium Essence. [range: 0 ~ 100, default: 20]
     I:hostile_drop_chance=20
@@ -293,8 +302,8 @@ world {
     # Minimum Y level Inferium Ore should spawn. [range: 1 ~ 255, default: 16]
     I:inferium_miny=16
 
-    # Amount of Inferium Ore veins to spawn. Higher = more. [range: 0 ~ 1000, default: 20]
-    I:inferium_veincount=20
+    # Amount of Inferium Ore veins to spawn. Higher = more. [range: 0 ~ 1000, default: 16]
+    I:inferium_veincount=16
 
     # Size of the Inferium Ore veins. [range: 0 ~ 100, default: 6]
     I:inferium_veinsize=6
@@ -305,8 +314,8 @@ world {
     # Minimum Y level Nether Inferium Ore should spawn. [range: 1 ~ 127, default: 10]
     I:nether_inferium_miny=10
 
-    # Amount of Nether Inferium Ore veins to spawn. Higher = more. [range: 0 ~ 1000, default: 20]
-    I:nether_inferium_veincount=20
+    # Amount of Nether Inferium Ore veins to spawn. Higher = more. [range: 0 ~ 1000, default: 16]
+    I:nether_inferium_veincount=16
 
     # Size of the Nether Inferium Ore veins. [range: 0 ~ 100, default: 6]
     I:nether_inferium_veinsize=6
@@ -317,8 +326,8 @@ world {
     # Minimum Y level Nether Prosperity Ore should spawn. [range: 1 ~ 127, default: 10]
     I:nether_prosperity_miny=10
 
-    # Amount of Nether Prosperity Ore veins to spawn. Higher = more. [range: 0 ~ 1000, default: 15]
-    I:nether_prosperity_veincount=15
+    # Amount of Nether Prosperity Ore veins to spawn. Higher = more. [range: 0 ~ 1000, default: 12]
+    I:nether_prosperity_veincount=12
 
     # Size of the Nether Prosperity Ore veins. [range: 0 ~ 100, default: 6]
     I:nether_prosperity_veinsize=6
@@ -329,8 +338,8 @@ world {
     # Minimum Y level Prosperity Ore should spawn. [range: 1 ~ 255, default: 16]
     I:prosperity_miny=16
 
-    # Amount of Prosperity Ore veins to spawn. Higher = more. [range: 0 ~ 1000, default: 15]
-    I:prosperity_veincount=15
+    # Amount of Prosperity Ore veins to spawn. Higher = more. [range: 0 ~ 1000, default: 12]
+    I:prosperity_veincount=12
 
     # Size of the Prosperity Ore veins. [range: 0 ~ 100, default: 6]
     I:prosperity_veinsize=6
