--- a/config/rftools/rftools.cfg
+++ b/config/rftools/rftools.cfg
@@ -120,9 +120,10 @@ builder {
 
     # Multiply the infusion factor with this value and add that to the quarry base speed
     I:quarryInfusionSpeedFactor=20
-
-    # If true the quarry will skip all tile entities. Set this to false to allow harvesting ores that are tile entities. Be careful with this!
     B:quarrySkipTileEntities=true
+
+    # If true the quarry will also quarry tile entities. Otherwise it just ignores them
+    B:quarryTileEntities=true
 
     # If true we allow shape cards to be crafted. Note that in order to use the quarry system you must also enable this
     B:shapeCardAllowed=true
@@ -1417,6 +1418,9 @@ screen {
 ##########################################################################################################
 
 shield {
+    # Set this to false if you don't want invisible shield rendering mode to be possible
+    B:allowInvisibleShield=true
+
     # Set this to true if you have a corrupted world due to a bad camo block in the shield system. Load your world, remove the offending block from the shield, exit MC and then set this back to false
     B:disableShieldBlocksToUncorruptWorld=false
 
