--- a/config/forestry/plugins.cfg
+++ b/config/forestry/plugins.cfg
@@ -8,6 +8,9 @@
 ##########################################################################################################
 
 plugins {
+    # Compatibility plugin for Actually Additions
+    B:forestry.actuallyadditions=true
+
     # Adds bees, beekeeping and bee products. Affects world generation.
     B:forestry.apiculture=true
 
