Update Mystical Agriculture

--- a/config/mysticalagriculture.cfg
+++ b/config/mysticalagriculture.cfg
@@ -61,6 +61,7 @@ gear {
     I:aluminum_tier=2
     I:ardite_tier=3
     I:bronze_tier=3
+    I:certus_quartz_tier=3
     I:cobalt_tier=4
     I:conductive_iron_tier=3
     I:copper_tier=2
@@ -68,6 +69,7 @@ gear {
     I:draconium_tier=5
     I:electrical_steel_tier=3
     I:energetic_alloy_tier=4
+    I:fluix_tier=4
     I:knightslime_tier=3
     I:lead_tier=3
     I:manasteel_tier=3
@@ -76,6 +78,7 @@ gear {
     I:osmium_tier=4
     I:peridot_tier=4
     I:pulsating_iron_tier=4
+    I:quartz_enriched_iron_tier=3
     I:redstone_alloy_tier=3
     I:refined_obsidian_tier=5
     I:ruby_tier=4
@@ -101,6 +104,7 @@ gear {
     B:aluminum_seeds=true
     B:ardite_seeds=true
     B:bronze_seeds=true
+    B:certus_quartz_seeds=true
     B:cobalt_seeds=true
     B:conductive_iron_seeds=true
     B:copper_seeds=true
@@ -108,6 +112,7 @@ gear {
     B:draconium_seeds=true
     B:electrical_steel_seeds=true
     B:energetic_alloy_seeds=true
+    B:fluix_seeds=true
     B:knightslime_seeds=true
     B:lead_seeds=true
     B:manasteel_seeds=true
@@ -116,6 +121,7 @@ gear {
     B:osmium_seeds=true
     B:peridot_seeds=true
     B:pulsating_iron_seeds=true
+    B:quartz_enriched_iron_seeds=true
     B:redstone_alloy_seeds=true
     B:refined_obsidian_seeds=true
     B:ruby_seeds=true
