--- a/config/mysticalagriculture_recipes.cfg
+++ b/config/mysticalagriculture_recipes.cfg
@@ -1,5 +1,11 @@
 # Configuration file
 
+"applied energistics 2" {
+    I:certus_quartz=6
+    I:fluix=6
+}
+
+
 botania {
     I:manasteel=5
     I:mystical_flower=8
@@ -124,6 +130,11 @@ mekanism {
     I:obsidian=12
     I:quartz=12
     I:redstone=16
+}
+
+
+"refined storage" {
+    I:quartz_enriched_iron=8
 }
 
 
