Disable Copper and Tin ore generation in Advanced Rocketry; use OreSpawn

--- a/config/advRocketry/advancedRocketry.cfg
+++ b/config/advRocketry/advancedRocketry.cfg
@@ -116,9 +116,9 @@ general {
     I:DilithiumPerChunk=1
     I:DilithiumPerChunkLuna=10
     I:DilithiumPerClump=16
-    B:GenerateCopper=true
+    B:GenerateCopper=false
     B:GenerateRutile=true
-    B:GenerateTin=true
+    B:GenerateTin=false
     I:RutilePerChunk=6
     I:RutilePerClump=3
     I:TinPerChunk=10
