Update Refined Storage

--- a/config/refinedstorage.cfg
+++ b/config/refinedstorage.cfg
@@ -46,6 +46,9 @@ energy {
     # The energy used by Disk Manipulators [range: 0 ~ 2147483647, default: 3]
     I:diskManipulator=3
 
+    # The amount of RS that equals 1 EU [range: 1 ~ 2147483647, default: 8]
+    I:euConversion=8
+
     # The energy used by Exporters [range: 0 ~ 2147483647, default: 1]
     I:exporter=1
 
@@ -100,7 +103,6 @@ energy {
 
 
 misc {
-    # For resource pack makers that want a translucent cable [default: false]
     B:translucentCables=false
 }
 
@@ -109,11 +111,17 @@ upgrades {
     # The additional energy used per Crafting Upgrade [range: 0 ~ 2147483647, default: 5]
     I:crafting=5
 
+    # The additional energy used by the Fortune Upgrade, multiplied by the level of the enchantment [range: 0 ~ 2147483647, default: 10]
+    I:fortune=10
+
     # The additional energy used by the Interdimensional Upgrade [range: 0 ~ 2147483647, default: 1000]
     I:interdimensional=1000
 
     # The additional energy used per Range Upgrade [range: 0 ~ 2147483647, default: 8]
     I:range=8
+
+    # The additional energy used by the Silk Touch Upgrade [range: 0 ~ 2147483647, default: 15]
+    I:silkTouch=15
 
     # The additional energy used per Speed Upgrade [range: 0 ~ 2147483647, default: 2]
     I:speed=2
