--- a/config/advRocketry/advancedRocketry.cfg
+++ b/config/advRocketry/advancedRocketry.cfg
@@ -29,7 +29,7 @@ biomes {
 
 
 gasmining {
-    # Multiplier for the amount of time gas collection missions take
+    # list of fluid names that can be harvested as Gas [default: ]
     D:gasMissionMultiplier=1.0
 }
 
@@ -66,6 +66,19 @@ general {
     # Should Electric Mushrooms be able to spawn lightning
     B:electricPlantsSpawnLightning=true
 
+    # List of oredictionary names of ores allowed to be mined by the laser drill if surface drilling is disabled
+    S:laserDrillOres <
+        oreIron
+        oreGold
+        oreCopper
+        oreTin
+        oreRedstone
+        oreDiamond
+     >
+
+    # If true the orbital laser will actually mine blocks on the planet below
+    B:laserDrillPlanet=false
+
     # If true the machines from AdvancedRocketry will produce things like plates/rods for other mods even if Advanced Rocketry itself does not use the material (This can increase load time)
     B:makeMaterialsForOtherMods=true
 
@@ -93,6 +106,10 @@ general {
 
     # Multplier for terraforming speed
     D:terraformMult=1.0
+
+    # Mod:Blockname  for example "minecraft:chest" [default: ]
+    S:torchBlocks <
+     >
 
     # Amount of damage taken every second in a vacuum
     I:vacuumDamage=1
@@ -167,7 +184,7 @@ planet {
     # Prevents any vanilla biomes from spawning on planets [default: false]
     B:blackListVanillaBiomes=false
 
-    # Dimensions including and after this number are allowed to be made into planets [range: -127 ~ 127, default: 2]
+    # Dimensions including and after this number are allowed to be made into planets [range: -127 ~ 65535, default: 2]
     I:minDimension=2
 }
 
