--- a/config/refinedstorage.cfg
+++ b/config/refinedstorage.cfg
@@ -131,6 +131,21 @@ upgrades {
 }
 
 
+wirelesscraftingmonitor {
+    # The energy used by the Wireless Crafting Monitor to cancel a task [range: 0 ~ 2147483647, default: 4]
+    I:cancel=4
+
+    # The energy used by the Wireless Crafting Monitor to cancel all tasks [range: 0 ~ 2147483647, default: 5]
+    I:cancelAll=5
+
+    # The energy used by the Wireless Crafting Monitor to open [range: 0 ~ 2147483647, default: 35]
+    I:open=35
+
+    # Whether the Wireless Crafting Monitor uses energy [default: true]
+    B:usesEnergy=true
+}
+
+
 wirelessgrid {
     # The energy used by the Wireless Grid to extract items [range: 0 ~ 2147483647, default: 3]
     I:extract=3
