--- a/config/wawla.cfg
+++ b/config/wawla.cfg
@@ -42,6 +42,15 @@ generic_entities {
 }
 
 
+generic_items {
+    # Shows the name of the mod which added the fluid? [default: true]
+    B:FluidOwner=true
+
+    # Shows the temperature of the fluid held by items? [default: true]
+    B:FluidTemperature=true
+}
+
+
 generic_tiles {
     # If this is enabled, the hud will display the blast resistance of a block while looking at it. [default: false]
     B:BlastResist=false
