Update Silent Gems

--- a/config/SilentGems.cfg
+++ b/config/SilentGems.cfg
@@ -9,6 +9,9 @@ main {
     ##########################################################################################################
 
     debug {
+        # Generic debug mode option. May add text to GUIs and WIT HUD. [default: false]
+        B:"Debug Mode"=false
+
         # Logs the existence of Chaos Flower Pots and Phantom Lights. Their tile entities, to be more precise. Also lists the position of each one. [default: false]
         B:"Log Pots and Lights"=false
 
