--- a/config/actuallyadditions.cfg
+++ b/config/actuallyadditions.cfg
@@ -477,7 +477,7 @@ other {
     B:"Do Cat Drops"=true
 
     # If true, Actually Additions Checks for updates on World Load.
-    B:"Do update check"=true
+    B:"Do update check"=false
 
     # Should Actually Additions Loot generate in dungeons??
     B:"Dungeon Loot"=true
