--- a/config/StorageDrawers.cfg
+++ b/config/StorageDrawers.cfg
@@ -96,6 +96,23 @@ integration {
 }
 
 
+registries {
+    # Items should be in form domain:item or domain:item:meta. [default: [minecraft:clay, minecraft:clay_ball, 4]]
+    S:compactingRules <
+        minecraft:clay, minecraft:clay_ball, 4
+     >
+
+    # List of ore dictionary names to blacklist for substitution. [default: ]
+    S:oreBlacklist <
+     >
+
+    # List of ore dictionary names to whitelist for substitution. [default: ]
+    S:oreWhitelist <
+     >
+    B:registerExtraCompactingRules=true
+}
+
+
 upgrades {
     I:level2Mult=2
     I:level3Mult=3
