--- a/config/mysticalagriculture.cfg
+++ b/config/mysticalagriculture.cfg
@@ -31,6 +31,9 @@ gear {
     # Gear Module enabled? [default: true]
     B:"$gear_module_override"=true
 
+    # Should uncrafting an upgraded armor/tool give back the charm? [default: true]
+    B:charm_return=true
+
     # Makes the Essence Ingots require 4 essence each instead of 2. [default: false]
     B:harder_ingots=false
 
@@ -248,14 +251,21 @@ settings {
     # Percentage chance of a second essence dropping. [range: 0 ~ 100, default: 5]
     I:essence_chance=5
 
+    # Enable Fertilized Essence? [default: true]
+    B:fertilized_essence=true
+
+    # Percentage chance that a Resource Crop will drop a Fertilized Essence when harvested. [range: 0 ~ 100, default: 5]
+    I:fertilized_essence_chance=5
+
     # Enable Growth Accelerators? [default: true]
     B:growth_accelerator=true
-
-    # Amount of seconds between each growth tick attempt. [range: 1 ~ 3600, default: 15]
     I:growth_accelerator_speed=15
 
     # Percentage chance for a hostile mob when killed to drop an Inferium Essence. [range: 0 ~ 100, default: 20]
     I:hostile_drop_chance=20
+
+    # Enable Mystical Fertilizer? [default: true]
+    B:mystical_fertilizer=true
 
     # Percentage chance for a passive mob when killed to drop an Inferium Essence. [range: 0 ~ 100, default: 25]
     I:passive_drop_chance=25
