Add more Chisels and Bits decorative blocks

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -93,6 +93,7 @@ crafting {
     B:com.knoxhack.nethermetals.blocks.ModBlockOre2=true
     B:com.knoxhack.nethermetals.blocks.ModBlockOre3=true
     B:com.progwml6.natura.nether.block.logs.BlockNetherLog=true
+    B:com.progwml6.natura.nether.block.planks.BlockNetherPlanks=true
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog=true
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog2=true
     B:com.progwml6.natura.overworld.block.logs.BlockRedwoodLog=true
@@ -231,7 +232,9 @@ crafting {
     B:vazkii.botania.common.block.decor.Block18Stone=true
     B:vazkii.botania.common.block.decor.BlockBlaze=true
     B:vazkii.botania.common.block.decor.BlockCustomBrick=true
+    B:vazkii.botania.common.block.decor.BlockElfGlass=true
     B:vazkii.botania.common.block.decor.BlockEndStoneBrick=true
+    B:vazkii.botania.common.block.decor.BlockManaGlass=true
     B:vazkii.botania.common.block.decor.BlockPavement=true
     B:vazkii.botania.common.block.decor.BlockPetalBlock=true
     B:vazkii.botania.common.block.decor.BlockPrismarine=true
