--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -89,6 +89,7 @@ crafting {
     B:arc.bloodarsenal.block.BlockSlate=true
     B:blusunrize.immersiveengineering.common.blocks.BlockIEBase=true
     B:com.jaquadro.minecraft.storagedrawers.block.BlockTrim=true
+    B:com.jolteffect.teslamodularsolars.block.BlockTitaniumOre=true
     B:com.knoxhack.nethermetals.blocks.ModBlockOre=true
     B:com.knoxhack.nethermetals.blocks.ModBlockOre2=true
     B:com.knoxhack.nethermetals.blocks.ModBlockOre3=true
@@ -103,6 +104,7 @@ crafting {
     B:com.rwtema.extrautils2.blocks.BlockDecorativeSolid=true
     B:com.rwtema.extrautils2.blocks.BlockDecorativeSolidWood=true
     B:com.rwtema.extrautils2.blocks.BlockRedstoneClock=true
+    B:com.trials.modsquad.block.ore.OreTin=true
     B:crazypants.enderio.block.BlockReinforcedObsidian=true
     B:crazypants.enderio.material.BlockIngotStorage=true
     B:cyano.basemetals.blocks.BlockMetalBlock=true
