--- a/config/StorageDrawers.cfg
+++ b/config/StorageDrawers.cfg
@@ -75,6 +75,7 @@ general {
     B:enableItemConversion=true
     B:enableLockUpgrades=true
     B:enablePersonalUpgrades=true
+    B:enableQuantifiableUpgrades=true
     B:enableRedstoneUpgrades=true
     B:enableShroudUpgrades=true
     B:enableSidedInput=true
