Chisels and Bits detected a new block

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -199,6 +199,7 @@ crafting {
     B:net.thedragonteam.armorplus.blocks.CompressedObsidian=true
     B:net.thedragonteam.armorplus.blocks.ElectricalBlock=true
     B:net.thedragonteam.armorplus.blocks.SteelBlock=true
+    B:org.jurassicraft.server.block.EncasedFossilBlock=true
     B:org.jurassicraft.server.block.tree.AncientLogBlock=true
     B:refinedstorage.block.BlockMachineCasing=true
     B:slimeknights.tconstruct.gadgets.block.BlockBrownstone=true
