Chisels and Bits detects two new blocks

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -109,6 +109,7 @@ crafting {
     B:crazypants.enderio.material.BlockIngotStorage=true
     B:cyano.basemetals.blocks.BlockMetalBlock=true
     B:cyano.basemetals.blocks.BlockMetalOre=true
+    B:elucent.roots.block.BlockBase=true
     B:exter.fodc.block.BlockOreConversionTable=true
     B:"forestry.arboriculture.blocks.log.BlockArbLog$1"=true
     B:"forestry.arboriculture.blocks.log.BlockFireproofVanillaLog$1"=true
@@ -200,6 +201,7 @@ crafting {
     B:net.thedragonteam.armorplus.blocks.ElectricalBlock=true
     B:net.thedragonteam.armorplus.blocks.SteelBlock=true
     B:org.jurassicraft.server.block.EncasedFossilBlock=true
+    B:org.jurassicraft.server.block.GypsumStoneBlock=true
     B:org.jurassicraft.server.block.tree.AncientLogBlock=true
     B:refinedstorage.block.BlockMachineCasing=true
     B:slimeknights.tconstruct.gadgets.block.BlockBrownstone=true
