Update Forge Mod Loader to 1.10.2-12.18.2.2179
Add Moving World and Davinci's Vessels.
Re-generate ProjectE EMC.

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -84,6 +84,8 @@ crafting {
     B:"forestry.arboriculture.blocks.log.BlockFireproofVanillaLog$1"=true
     B:net.minecraft.block.BlockNewLog=true
     B:net.minecraft.block.BlockOldLog=true
+    B:net.minecraft.block.BlockPlanks=true
+    B:net.minecraft.block.BlockStone=true
     B:org.jurassicraft.server.block.tree.AncientLogBlock=true
 }
 
