--- a/config/gravestone.cfg
+++ b/config/gravestone.cfg
@@ -6,6 +6,23 @@ gravestone {
     B:enable_living_entity_graves=false
     B:only_owners_can_break=false
     B:remove_death_note=false
+    S:replaceable_blocks <
+        minecraft:tallgrass
+        minecraft:water
+        minecraft:lava
+        minecraft:yellow_flower
+        minecraft:red_flower
+        minecraft:double_plant
+        minecraft:sapling
+        minecraft:brown_mushroom
+        minecraft:red_mushroom
+        minecraft:torch
+        minecraft:snow_layer
+        minecraft:vine
+        minecraft:deadbush
+        minecraft:reeds
+        minecraft:fire
+     >
 }
 
 
