--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -80,13 +80,22 @@ crafting {
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog=true
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog2=true
     B:com.progwml6.natura.overworld.block.logs.BlockRedwoodLog=true
+    B:com.progwml6.natura.overworld.block.planks.BlockOverworldPlanks=true
+    B:com.raoulvdberge.refinedstorage.block.BlockMachineCasing=true
     B:"forestry.arboriculture.blocks.log.BlockArbLog$1"=true
     B:"forestry.arboriculture.blocks.log.BlockFireproofVanillaLog$1"=true
+    B:net.minecraft.block.Block=true
+    B:net.minecraft.block.BlockDirt=true
+    B:net.minecraft.block.BlockGlass=true
+    B:net.minecraft.block.BlockHardenedClay=true
     B:net.minecraft.block.BlockNewLog=true
+    B:net.minecraft.block.BlockObsidian=true
     B:net.minecraft.block.BlockOldLog=true
     B:net.minecraft.block.BlockPlanks=true
     B:net.minecraft.block.BlockStone=true
+    B:net.minecraft.block.BlockStoneBrick=true
     B:org.jurassicraft.server.block.tree.AncientLogBlock=true
+    B:zmaster587.libVulpes.block.BlockOre=true
 }
 
 
