Update ArmorPlus, RFTools, and ProjectE pregenerated EMC

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -84,14 +84,20 @@ crafting {
     B:com.raoulvdberge.refinedstorage.block.BlockMachineCasing=true
     B:"forestry.arboriculture.blocks.log.BlockArbLog$1"=true
     B:"forestry.arboriculture.blocks.log.BlockFireproofVanillaLog$1"=true
+    B:io.github.elytra.davincisvessels.common.object.block.BlockAS=true
+    B:mcjty.rftools.blocks.MachineFrame=true
     B:net.minecraft.block.Block=true
+    B:net.minecraft.block.BlockBone=true
+    B:net.minecraft.block.BlockColored=true
     B:net.minecraft.block.BlockDirt=true
     B:net.minecraft.block.BlockGlass=true
+    B:net.minecraft.block.BlockGravel=true
     B:net.minecraft.block.BlockHardenedClay=true
     B:net.minecraft.block.BlockNewLog=true
     B:net.minecraft.block.BlockObsidian=true
     B:net.minecraft.block.BlockOldLog=true
     B:net.minecraft.block.BlockPlanks=true
+    B:net.minecraft.block.BlockSand=true
     B:net.minecraft.block.BlockStone=true
     B:net.minecraft.block.BlockStoneBrick=true
     B:org.jurassicraft.server.block.tree.AncientLogBlock=true
