--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -76,6 +76,8 @@ crafting {
 
 
 "enabled blocks" {
+    B:WayofTime.bloodmagic.block.BlockBloodRune=true
+    B:WayofTime.bloodmagic.block.BlockBloodStoneBrick=true
     B:com.progwml6.natura.nether.block.logs.BlockNetherLog=true
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog=true
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog2=true
