Update Blood Magic

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -78,6 +78,7 @@ crafting {
 "enabled blocks" {
     B:WayofTime.bloodmagic.block.BlockBloodRune=true
     B:WayofTime.bloodmagic.block.BlockBloodStoneBrick=true
+    B:WayofTime.bloodmagic.block.BlockRitualStone=true
     B:com.progwml6.natura.nether.block.logs.BlockNetherLog=true
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog=true
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog2=true
@@ -91,6 +92,7 @@ crafting {
     B:net.minecraft.block.Block=true
     B:net.minecraft.block.BlockBone=true
     B:net.minecraft.block.BlockColored=true
+    B:net.minecraft.block.BlockCompressedPowered=true
     B:net.minecraft.block.BlockDirt=true
     B:net.minecraft.block.BlockGlass=true
     B:net.minecraft.block.BlockGravel=true
