Add Chisel (thanks Direwolf20)

--- a/config/Mercurius.cfg
+++ b/config/Mercurius.cfg
@@ -63,6 +63,7 @@ general {
             B:bigreactors=false
             B:brandonscore=false
             B:ccl-entityhook=false
+            B:chisel=false
             B:chiselsandbits=false
             B:davincisvessels=false
             B:draconicevolution=false
