--- a/config/sgcraft.cfg
+++ b/config/sgcraft.cfg
@@ -60,6 +60,7 @@ stargate {
     I:secondsToStayOpen=300
     D:soundVolume=1.0
     B:transparency=true
+    B:variableChevronPositions=true
 }
 
 
