Apparently Chisels and Bits only finds blocks when you obtain/craft one

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -79,6 +79,7 @@ crafting {
     B:WayofTime.bloodmagic.block.BlockBloodRune=true
     B:WayofTime.bloodmagic.block.BlockBloodStoneBrick=true
     B:WayofTime.bloodmagic.block.BlockRitualStone=true
+    B:com.jolteffect.teslamodularsolars.block.BlockTitanium=true
     B:com.progwml6.natura.nether.block.logs.BlockNetherLog=true
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog=true
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog2=true
@@ -105,6 +106,9 @@ crafting {
     B:net.minecraft.block.BlockStone=true
     B:net.minecraft.block.BlockStoneBrick=true
     B:org.jurassicraft.server.block.tree.AncientLogBlock=true
+    B:vazkii.botania.common.block.BlockDreamwood=true
+    B:vazkii.botania.common.block.BlockLivingrock=true
+    B:vazkii.botania.common.block.BlockLivingwood=true
     B:zmaster587.libVulpes.block.BlockOre=true
 }
 
