--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -80,6 +80,7 @@ crafting {
 
 
 "enabled blocks" {
+    B:WayofTime.bloodmagic.block.BlockRitualStone=true
     B:com.progwml6.natura.nether.block.logs.BlockNetherLog=true
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog=true
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog2=true
@@ -91,9 +92,11 @@ crafting {
     B:net.minecraft.block.BlockBone=true
     B:net.minecraft.block.BlockColored=true
     B:net.minecraft.block.BlockNewLog=true
+    B:net.minecraft.block.BlockObsidian=true
     B:net.minecraft.block.BlockOldLog=true
     B:net.minecraft.block.BlockPlanks=true
     B:org.jurassicraft.server.block.tree.AncientLogBlock=true
+    B:vazkii.botania.common.block.BlockLivingrock=true
 }
 
 
