A few more Chisels and Bits blocks recognized

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -85,18 +85,32 @@ crafting {
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog=true
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog2=true
     B:com.progwml6.natura.overworld.block.logs.BlockRedwoodLog=true
+    B:elucent.roots.block.BlockBase=true
     B:"forestry.arboriculture.blocks.log.BlockArbLog$1"=true
     B:"forestry.arboriculture.blocks.log.BlockFireproofVanillaLog$1"=true
     B:forestry.core.blocks.BlockResourceStorage=true
     B:io.github.elytra.davincisvessels.common.object.block.BlockAS=true
+    B:mcjty.rftools.blocks.MachineBase=true
+    B:moze_intel.projecte.gameObjs.blocks.MatterBlock=true
+    B:net.minecraft.block.Block=true
     B:net.minecraft.block.BlockBone=true
     B:net.minecraft.block.BlockColored=true
+    B:net.minecraft.block.BlockDirt=true
+    B:net.minecraft.block.BlockGlass=true
+    B:net.minecraft.block.BlockGlowstone=true
+    B:net.minecraft.block.BlockGrass=true
     B:net.minecraft.block.BlockNewLog=true
     B:net.minecraft.block.BlockObsidian=true
+    B:net.minecraft.block.BlockOldLeaf=true
     B:net.minecraft.block.BlockOldLog=true
     B:net.minecraft.block.BlockPlanks=true
+    B:net.minecraft.block.BlockQuartz=true
+    B:net.minecraft.block.BlockSand=true
+    B:net.minecraft.block.BlockStone=true
+    B:net.minecraft.block.BlockWorkbench=true
     B:org.jurassicraft.server.block.tree.AncientLogBlock=true
     B:vazkii.botania.common.block.BlockLivingrock=true
+    B:vazkii.botania.common.block.decor.BlockManaGlass=true
 }
 
 
