--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -80,6 +80,7 @@ crafting {
 
 
 "enabled blocks" {
+    B:WayofTime.bloodmagic.block.BlockBloodRune=true
     B:WayofTime.bloodmagic.block.BlockRitualStone=true
     B:com.progwml6.natura.nether.block.logs.BlockNetherLog=true
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog=true
@@ -99,6 +100,7 @@ crafting {
     B:net.minecraft.block.BlockGlass=true
     B:net.minecraft.block.BlockGlowstone=true
     B:net.minecraft.block.BlockGrass=true
+    B:net.minecraft.block.BlockNetherBrick=true
     B:net.minecraft.block.BlockNewLog=true
     B:net.minecraft.block.BlockObsidian=true
     B:net.minecraft.block.BlockOldLeaf=true
@@ -109,6 +111,7 @@ crafting {
     B:net.minecraft.block.BlockStone=true
     B:net.minecraft.block.BlockWorkbench=true
     B:org.jurassicraft.server.block.tree.AncientLogBlock=true
+    B:vazkii.botania.common.block.BlockDreamwood=true
     B:vazkii.botania.common.block.BlockLivingrock=true
     B:vazkii.botania.common.block.decor.BlockManaGlass=true
 }
