--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -81,11 +81,13 @@ crafting {
 
 "enabled blocks" {
     B:WayofTime.bloodmagic.block.BlockBloodRune=true
+    B:WayofTime.bloodmagic.block.BlockBloodStoneBrick=true
     B:WayofTime.bloodmagic.block.BlockRitualStone=true
     B:com.progwml6.natura.nether.block.logs.BlockNetherLog=true
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog=true
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog2=true
     B:com.progwml6.natura.overworld.block.logs.BlockRedwoodLog=true
+    B:de.ellpeck.actuallyadditions.mod.blocks.BlockMisc=true
     B:elucent.roots.block.BlockBase=true
     B:"forestry.arboriculture.blocks.log.BlockArbLog$1"=true
     B:"forestry.arboriculture.blocks.log.BlockFireproofVanillaLog$1"=true
