Update Mystical Agriculture
Refresh pregenerated EMC.

--- a/config/mysticalagriculture.cfg
+++ b/config/mysticalagriculture.cfg
@@ -78,12 +78,14 @@ gear {
     I:manasteel_tier=3
     I:manyullyn_tier=5
     I:mystical_flower_tier=2
+    I:nickel_tier=4
     I:osmium_tier=4
     I:peridot_tier=4
     I:pulsating_iron_tier=4
     I:quartz_enriched_iron_tier=3
     I:redstone_alloy_tier=3
     I:refined_obsidian_tier=5
+    I:rubber_tier=2
     I:ruby_tier=4
     I:sapphire=4
     I:silver_tier=3
@@ -121,12 +123,14 @@ gear {
     B:manasteel_seeds=true
     B:manyullyn_seeds=true
     B:mystical_flower_seeds=true
+    B:nickel_seeds=true
     B:osmium_seeds=true
     B:peridot_seeds=true
     B:pulsating_iron_seeds=true
     B:quartz_enriched_iron_seeds=true
     B:redstone_alloy_seeds=true
     B:refined_obsidian_seeds=true
+    B:rubber_seeds=true
     B:ruby_seeds=true
     B:sapphire_seeds=true
     B:silver_seeds=true
@@ -167,6 +171,7 @@ gear {
     I:glowstone_tier=3
     I:gold_tier=4
     I:guardian_tier=3
+    I:ice_tier=1
     I:iron_tier=3
     I:lapis_lazuli_tier=4
     I:nature_tier=1
@@ -211,6 +216,7 @@ seeds {
     B:glowstone_seeds=true
     B:gold_seeds=true
     B:guardian_seeds=true
+    B:ice_seeds=true
     B:iron_seeds=true
     B:lapis_lazuli_seeds=true
     B:nature_seeds=true
