--- a/config/mysticalagriculture_recipes.cfg
+++ b/config/mysticalagriculture_recipes.cfg
@@ -26,16 +26,19 @@ botania {
     I:end_stone=16
     I:grass=12
     I:gravel=16
+    I:ice=8
     I:lilypad=8
     I:melon=8
     I:mossy_cobblestone=16
     I:mossy_stonebrick=16
     I:nether_brick=24
     I:netherrack=32
+    I:packed_ice=12
     I:podzol=8
     I:pumpkin=16
     I:sand=16
     I:sapling=4
+    I:snow=12
     I:soul_sand=20
     I:stone=32
     I:sugarcane=16
@@ -114,6 +117,8 @@ mekanism {
     I:bronze=4
     I:copper=6
     I:lead=4
+    I:nickel=4
+    I:rubber=8
     I:silver=4
     I:steel=3
     I:tin=4
