Update Brandon's Core, ChickenCoreLib, and Draconic Evolution

--- a/config/brandon3055/DraconicEvolution.cfg
+++ b/config/brandon3055/DraconicEvolution.cfg
@@ -65,6 +65,12 @@ blocks {
 
     # Invert Dislocator Pedestal display name shift behavior.
     B:invertDPDSB=false
+
+    # This allowes you to just disable the energy crystal shader which can be a lot lagier than the reactor since there are usually a lot more of them (The fallback crystal texture is not soooo bad...)
+    B:useCrystalShaders=true
+
+    # Set this to false if your system can not handle the awesomeness that is shaders! (Warning will make cool things look like crap)
+    B:useShaders=true
 }
 
 
