--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -116,6 +116,7 @@ crafting {
     B:vazkii.botania.common.block.BlockDreamwood=true
     B:vazkii.botania.common.block.BlockLivingrock=true
     B:vazkii.botania.common.block.decor.BlockManaGlass=true
+    B:vazkii.quark.building.block.BlockWorldStoneBricks=true
 }
 
 
