--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -107,6 +107,7 @@ crafting {
     B:net.minecraft.block.BlockObsidian=true
     B:net.minecraft.block.BlockOldLeaf=true
     B:net.minecraft.block.BlockOldLog=true
+    B:net.minecraft.block.BlockOre=true
     B:net.minecraft.block.BlockPlanks=true
     B:net.minecraft.block.BlockQuartz=true
     B:net.minecraft.block.BlockSand=true
@@ -116,6 +117,7 @@ crafting {
     B:vazkii.botania.common.block.BlockDreamwood=true
     B:vazkii.botania.common.block.BlockLivingrock=true
     B:vazkii.botania.common.block.decor.BlockManaGlass=true
+    B:vazkii.quark.building.block.BlockVerticalPlanks=true
     B:vazkii.quark.building.block.BlockWorldStoneBricks=true
 }
 
