Update BloodMoon (lowercase config)

--- a/config/Mercurius.cfg
+++ b/config/Mercurius.cfg
@@ -60,6 +60,7 @@ general {
             B:betteragriculture=false
             B:betterbuilderswands=false
             B:bigreactors=false
+            B:bloodmoon=false
             B:brandonscore=false
             B:ccl-entityhook=false
             B:chisel=false
