Update Mystical Agriculture

--- a/config/mysticalagriculture_recipes.cfg
+++ b/config/mysticalagriculture_recipes.cfg
@@ -77,6 +77,11 @@ gems {
 }
 
 
+"immersive engineering" {
+    I:constantan=4
+}
+
+
 mekanism {
     I:osmium=4
     I:refined_obsidian=2
@@ -116,6 +121,7 @@ mekanism {
     I:aluminum=8
     I:bronze=4
     I:copper=6
+    I:electrum=4
     I:lead=4
     I:nickel=4
     I:rubber=8
@@ -133,6 +139,7 @@ mekanism {
     I:glowstone=16
     I:gold=4
     I:iron=6
+    I:lapis=12
     I:obsidian=12
     I:quartz=12
     I:redstone=16
