--- a/config/mysticalagriculture.cfg
+++ b/config/mysticalagriculture.cfg
@@ -67,10 +67,12 @@ gear {
     I:certus_quartz_tier=3
     I:cobalt_tier=4
     I:conductive_iron_tier=3
+    I:constantan_tier=4
     I:copper_tier=2
     I:dark_steel_tier=4
     I:draconium_tier=5
     I:electrical_steel_tier=3
+    I:electrum_tier=4
     I:energetic_alloy_tier=4
     I:fluix_tier=4
     I:knightslime_tier=3
@@ -112,10 +114,12 @@ gear {
     B:certus_quartz_seeds=true
     B:cobalt_seeds=true
     B:conductive_iron_seeds=true
+    B:constantan_seeds=true
     B:copper_seeds=true
     B:dark_steel_seeds=true
     B:draconium_seeds=true
     B:electrical_steel_seeds=true
+    B:electrum_seeds=true
     B:energetic_alloy_seeds=true
     B:fluix_seeds=true
     B:knightslime_seeds=true
@@ -272,7 +276,7 @@ settings {
     # Enable Mystical Fertilizer? [default: true]
     B:mystical_fertilizer=true
 
-    # Percentage chance for a passive mob when killed to drop an Inferium Essence. [range: 0 ~ 100, default: 25]
+    # Percentage chance for a passive mob when killed to drop an Inferium Essence. [range: 0 ~ 100, default: 20]
     I:passive_drop_chance=25
 
     # Percentage chance of a second seed dropping. [range: 0 ~ 100, default: 10]
