Add RFTools Control mod

--- a/config/Mercurius.cfg
+++ b/config/Mercurius.cfg
@@ -104,6 +104,7 @@ general {
             B:randomthings=false
             B:refinedstorage=false
             B:rftools=false
+            B:rftoolscontrol=false
             B:rftoolsdim=false
             B:roots=false
             B:sgcraft=false
