Update Draconic Evolution

--- a/config/brandon3055/DraconicEvolution.cfg
+++ b/config/brandon3055/DraconicEvolution.cfg
@@ -20,10 +20,12 @@ blocks {
     B:draconic_block=true
     B:draconium_block=true
     B:draconium_ore=true
+    B:energy_crystal=true
     B:energy_infuser=true
     B:energy_pylon=true
     B:energy_storage_core=true
     B:entity_detector=true
+    B:flow_gate=true
     B:fusion_crafting_core=true
     B:generator=true
     B:grinder=true
@@ -87,6 +89,7 @@ items {
     B:chaos_shard=true
     B:chaotic_core=true
     B:creative_exchanger=true
+    B:crystal_binder=true
     B:debugger=true
     B:dislocator=true
     B:dislocator_advanced=true
