My son's requested mods after watching Direwolf20.
Add EnderCore and EnderIO, even though they duplicate Mekanism.
Add Super Circuit Maker.
Regenerated EMC and Moving World Assemblies.

--- a/config/Mercurius.cfg
+++ b/config/Mercurius.cfg
@@ -30,6 +30,7 @@ general {
             B:Botania=false
             B:Chameleon=false
             B:CodeChickenLib=false
+            B:EnderIO=false
             B:FML=false
             B:Forge=false
             B:Harvest=false
@@ -68,6 +69,7 @@ general {
             B:davincisvessels=false
             B:draconicevolution=false
             B:enchiridion=false
+            B:endercore=false
             B:fastleafdecay=false
             B:fodc=false
             B:forestry=false
@@ -107,6 +109,7 @@ general {
             B:rftoolscontrol=false
             B:rftoolsdim=false
             B:roots=false
+            B:rscircuits=false
             B:sgcraft=false
             B:simpleretrogen=false
             B:supercraftingframe=false
