--- a/config/MovingWorld/AssemblePriority.cfg
+++ b/config/MovingWorld/AssemblePriority.cfg
@@ -45,8 +45,8 @@ mobile_chunk {
         minecraft:dark_oak_door
         advancedrocketry:airlock_door
         advancedrocketry:oxygenDetection
-        quark:nether_brick_fence_gate
         quark:obsidian_pressure_plate
+        quark:nether_brick_fence_gate
         basemetals:adamantine_door
         basemetals:aquarium_door
         basemetals:brass_door
@@ -81,7 +81,11 @@ mobile_chunk {
         botania:redStringInterceptor
         botania:corporeaRetainer
         davincisvessels:crate_wood
-        forestry:greenhouse.door
+        enderio:blockSelfResettingLever10
+        enderio:blockSelfResettingLever30
+        enderio:blockSelfResettingLever60
+        enderio:blockSelfResettingLever300
+        enderio:blockPaintedFenceGate
         forestry:fence.gates.larch
         forestry:fence.gates.fireproof.larch
         forestry:fence.gates.teak
@@ -175,6 +179,7 @@ mobile_chunk {
         forestry:doors.padauk
         forestry:doors.cocobolo
         forestry:doors.zebrawood
+        forestry:greenhouse.door
         advgenerators:Control
         tconstruct:slime_channel
         malisisblocks:vanishing_block
