--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -33,6 +33,7 @@ modules {
     B:BloodMagic.bypassSneak=false
     B:BloodMagic.ritualController=true
     B:BloodMagic.teleposer=true
+    B:facades.hidden=true
     B:super_crafting_frame.shift_for_more_info=true
     B:tconstruct.casting=true
     B:tconstruct.progress=true
@@ -60,6 +61,7 @@ server_forcing {
     B:BloodMagic.bypassSneak=false
     B:BloodMagic.ritualController=false
     B:BloodMagic.teleposer=false
+    B:facades.hidden=false
     B:super_crafting_frame.shift_for_more_info=false
     B:tconstruct.casting=false
     B:tconstruct.progress=false
